Contract Configurator 1.27.0
- Added Expansion requirement.
- Added LAUNCH_SITE sub-node to WaypointGenerator behaviour.
- Added support for LaunchSite class in expressions.
- Added OtherKerbinBiomes() function to return biomes like Baikerbanur biomes.
- Fixed Biome functions to correctly distinguish between KSC biomes and other collider based biomes.
- Fixed issue with sub-parameters sometimes showing as met when they shouldn't.
- Clarified error message when SpawnPassengers is omitted from a contract that requires it.

Contract Configurator 1.26.0
- Recompile for KSP 1.5.1
- Updated to work with RemoteTech 1.8.13+ (thanks PiezPiedPy).
- Added trig functions to expression langugage (thanks VaPal).
- Invalid Celestial Bodies constants no longer throw an error on parsing (improves overall support for planet packs that remove/rename planets).
- Fixed a bug that prevented casting from string to ExperienceTrait.
- Fixed an issue affecting CollectScience and biomes with spaces (thanks mpharoah).

Contract Configurator 1.25.0
- Added ExperienceTrait to parser.
- Kerbal.ExperienceTrait now returns an ExperienceTrait instead of a localised string.
- Increased max active contract multiplier slider maximum from 2.0 to 8.0.
- Support for RemoteTech 1.8.10.3 (thanks wraithan).

Contract Configurator 1.24.4
- More attempts to workaround stock bug.

Contract Configurator 1.24.3
- Proper fix for last release (thanks Warezcrawler).

Contract Configurator 1.24.2
- Workaround for stock bug #18267 (contract parameters creating extra messages on completion).

Contract Configurator 1.24.1
- Recompile against KSP 1.4.2
- Re-enabled RemoteTech and Kerbal Konstructs integration for KSP 1.4.x.
- Fix error message when despawning spawned Kerbals (thanks steve_v).
- Added a warning message when validation errors prevent a DATA_EXPAND node from being parsed (thanks gyf1214).
- Fixed NRE when checking progress nodes (thanks DocMop).