@@ -38,6 +38,8 @@ CONTRACT_TYPE
             type = ReachState
 
             situation = FLYING
+            minDeltaVeeActual = 500
+            maxDeltaVeeActual = 1000
             targetBody = Kerbin
         }
 
@@ -63,16 +65,6 @@ CONTRACT_TYPE
             maxCrew = 1
 
             disableOnStateChange = false
-        }
-
-        PARAMETER
-        {
-            name = HasPassengers
-            type = HasPassengers
-
-            // Number of passengers required.
-            // Default = 1
-            count = 1
         }
 
         PARAMETER
